syntax="proto3";

package pb;

option go_package = ".;pb";

service Greeter {
    rpc SayHello(HelloRequest)  returns (HelloReply) {};
}

message HelloRequest{
    string Name = 1;
}

message HelloReply {
    string Message = 1;
}


